--- a/SpaManagementSoftware/SpaClassLibrary/app.config
+++ b/SpaManagementSoftware/SpaClassLibrary/app.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="SpaClassLibrary.Properties.Settings.DB_SPAConnect"
-            connectionString="Data Source=A\SQLEXPRESS;Initial Catalog=DB;User ID=sa;Password=sa2012"
+            connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=DB_SPA;User ID=sa;Password=sa2012"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
