--- a/SpaManagementSoftware/SpaManagementSoftware/SpaManagementSoftware.csproj
+++ b/SpaManagementSoftware/SpaManagementSoftware/SpaManagementSoftware.csproj
@@ -48,6 +48,7 @@
     <Reference Include="DevExpress.XtraEditors.v17.1" />
     <Reference Include="DevExpress.Printing.v17.1.Core" />
     <Reference Include="DevExpress.XtraLayout.v17.1, Version=17.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraNavBar.v17.1, Version=17.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="PresentationCore" />
     <Reference Include="SpaClassLibrary">
       <HintPath>..\SpaClassLibrary\bin\Debug\SpaClassLibrary.dll</HintPath>
@@ -69,6 +70,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreateControl.cs" />
     <Compile Include="frmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
