--- a/SpaManagementSoftware/SpaClassLibrary/Properties/Settings.settings
+++ b/SpaManagementSoftware/SpaClassLibrary/Properties/Settings.settings
@@ -14,10 +14,13 @@
     <Setting Name="DB_SPAConnect" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=.\SQLEXPRESS;Initial Catalog=DB_SPA;User ID=sa;Password=sa2012&lt;/ConnectionString&gt;
+  &lt;ConnectionString /&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=.\SQLEXPRESS;Initial Catalog=DB_SPA;User ID=sa;Password=sa2012</Value>
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="Connect" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
