--- a/SpaManagementSoftware/SpaClassLibrary/app.config
+++ b/SpaManagementSoftware/SpaClassLibrary/app.config
@@ -5,11 +5,7 @@
             <section name="SpaClassLibrary.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
-    <connectionStrings>
-        <add name="SpaClassLibrary.Properties.Settings.DB_SPAConnect"
-            connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=DB_SPA;User ID=sa;Password=sa2012"
-            providerName="System.Data.SqlClient" />
-    </connectionStrings>
+    <connectionStrings />
     <userSettings>
         <SpaClassLibrary.Properties.Settings>
             <setting name="RemeberPass" serializeAs="String">
@@ -19,6 +15,9 @@
                 <value />
             </setting>
             <setting name="PassWord" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Connect" serializeAs="String">
                 <value />
             </setting>
         </SpaClassLibrary.Properties.Settings>
