--- a/SpaManagementSoftware/SpaClassLibrary/app.config
+++ b/SpaManagementSoftware/SpaClassLibrary/app.config
@@ -5,7 +5,14 @@
             <section name="SpaClassLibrary.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
-    <connectionStrings />
+    <connectionStrings>
+        <add name="SpaClassLibrary.Properties.Settings.DB_SPAConnect"
+            connectionString="Data Source=HOANGPHUC-PC\SQLEXPRESS;Initial Catalog=DB_SPA;User ID=sa;Password=sa2012"
+            providerName="System.Data.SqlClient" />
+        <add name="SpaClassLibrary.Properties.Settings.DB_SPAConnectionString"
+            connectionString="Data Source=HOANGPHUC-PC\SQLEXPRESS;Initial Catalog=DB_SPA;User ID=sa;Password=sa2012"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <userSettings>
         <SpaClassLibrary.Properties.Settings>
             <setting name="RemeberPass" serializeAs="String">
