--- a/SpaManagementSoftware/SpaManagementSoftware/SpaManagementSoftware.csproj
+++ b/SpaManagementSoftware/SpaManagementSoftware/SpaManagementSoftware.csproj
@@ -47,8 +47,10 @@
     <Reference Include="DevExpress.XtraEditors.v17.1, Version=17.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraEditors.v17.1" />
     <Reference Include="DevExpress.Printing.v17.1.Core" />
+    <Reference Include="DevExpress.XtraGrid.v17.1, Version=17.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraLayout.v17.1, Version=17.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraNavBar.v17.1, Version=17.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraPrinting.v17.1, Version=17.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="PresentationCore" />
     <Reference Include="SpaClassLibrary">
       <HintPath>..\SpaClassLibrary\bin\Debug\SpaClassLibrary.dll</HintPath>
@@ -89,6 +91,12 @@
     <Compile Include="frmAddCustomer.Designer.cs">
       <DependentUpon>frmAddCustomer.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmAddEnterCoupon.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAddEnterCoupon.Designer.cs">
+      <DependentUpon>frmAddEnterCoupon.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmAddGroupSupplier.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -124,6 +132,12 @@
     </Compile>
     <Compile Include="frmCustomer.Designer.cs">
       <DependentUpon>frmCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmEnterItem.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmEnterItem.Designer.cs">
+      <DependentUpon>frmEnterItem.cs</DependentUpon>
     </Compile>
     <Compile Include="frmLogin.cs">
       <SubType>Form</SubType>
@@ -161,6 +175,9 @@
     <EmbeddedResource Include="frmAddCustomer.resx">
       <DependentUpon>frmAddCustomer.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmAddEnterCoupon.resx">
+      <DependentUpon>frmAddEnterCoupon.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmAddGroupSupplier.resx">
       <DependentUpon>frmAddGroupSupplier.cs</DependentUpon>
     </EmbeddedResource>
@@ -178,6 +195,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmCustomer.resx">
       <DependentUpon>frmCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmEnterItem.resx">
+      <DependentUpon>frmEnterItem.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
