--- a/SpaManagementSoftware/SpaManagementSoftware/SpaManagementSoftware.csproj
+++ b/SpaManagementSoftware/SpaManagementSoftware/SpaManagementSoftware.csproj
@@ -94,6 +94,12 @@
     <Compile Include="frmAddGroupSupplier.Designer.cs">
       <DependentUpon>frmAddGroupSupplier.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmAddItems.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAddItems.Designer.cs">
+      <DependentUpon>frmAddItems.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmAddSupplier.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -130,6 +136,12 @@
     <Compile Include="frmEnterItem.Designer.cs">
       <DependentUpon>frmEnterItem.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmItems.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmItems.Designer.cs">
+      <DependentUpon>frmItems.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -147,6 +159,12 @@
     </Compile>
     <Compile Include="frmRole.Designer.cs">
       <DependentUpon>frmRole.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmSearchItems.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmSearchItems.Designer.cs">
+      <DependentUpon>frmSearchItems.cs</DependentUpon>
     </Compile>
     <Compile Include="frmSupplier.cs">
       <SubType>Form</SubType>
@@ -172,6 +190,9 @@
     <EmbeddedResource Include="frmAddGroupSupplier.resx">
       <DependentUpon>frmAddGroupSupplier.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmAddItems.resx">
+      <DependentUpon>frmAddItems.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmAddSupplier.resx">
       <DependentUpon>frmAddSupplier.cs</DependentUpon>
     </EmbeddedResource>
@@ -190,6 +211,9 @@
     <EmbeddedResource Include="frmEnterItem.resx">
       <DependentUpon>frmEnterItem.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmItems.resx">
+      <DependentUpon>frmItems.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </EmbeddedResource>
@@ -198,6 +222,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmRole.resx">
       <DependentUpon>frmRole.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSearchItems.resx">
+      <DependentUpon>frmSearchItems.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmSupplier.resx">
       <DependentUpon>frmSupplier.cs</DependentUpon>
@@ -352,6 +379,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\import-terminal.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\items.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
