--- a/SpaManagementSoftware/SpaClassLibrary/SpaClassLibrary.csproj
+++ b/SpaManagementSoftware/SpaClassLibrary/SpaClassLibrary.csproj
@@ -68,11 +68,13 @@
     <Compile Include="CustomerManager.cs" />
     <Compile Include="C_Account.cs" />
     <Compile Include="C_Enter.cs" />
+    <Compile Include="C_GroupItem.cs" />
     <Compile Include="C_ImportExcel.cs" />
     <Compile Include="C_Items.cs" />
     <Compile Include="C_Role.cs" />
     <Compile Include="C_Staff.cs" />
     <Compile Include="C_Supplier.cs" />
+    <Compile Include="C_Unit.cs" />
     <Compile Include="DC_SPA.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
