Tiếp tục làm phần kế tiếp cập nhật chi tiết hóa đơn
Cập nhật chi tiết hóa đơn
Tạo form tính tiền
Cập nhật số lượng trong kho (nếu có time)

--- a/SpaManagementSoftware/SpaManagementSoftware/SpaManagementSoftware.csproj
+++ b/SpaManagementSoftware/SpaManagementSoftware/SpaManagementSoftware.csproj
@@ -76,6 +76,7 @@
   <ItemGroup>
     <Compile Include="CreateControl.cs" />
     <Compile Include="C_Customer.cs" />
+    <Compile Include="ReceiptTemp.cs" />
     <Compile Include="frmAddCustomer.cs">
       <SubType>Form</SubType>
     </Compile>
